chore(ci): 添加P0-P4架构合规性检查及质量门禁流程
- 新增P0可编译基线检查，确保microservices-common模块可编译
- 新增P1工程结构一致性检查，验证包结构与目录结构对齐及命名规范
- 增加P2 API契约一致性检查，防止跨层访问和依赖倒置
- 实现P3 IDE配置一致性检查，验证JDK版本及注解处理正确性
- 添加P4工程治理检查，包括代码质量、安全、性能、国际化、文档和配置安全
- 配置质量门禁，确保P0至P4全部通过后才允许合并
- 生成详细检查日志与质量报告，方便问题定位与跟踪